--- a/buildpack.toml
+++ b/buildpack.toml
@@ -1,14 +1,14 @@
 api = "0.7"
 
 [buildpack]
-  homepage = "https://github.com/paketo-buildpacks/yarn"
-  id = "paketo-buildpacks/yarn"
-  name = "Paketo Buildpack for Yarn"
+  homepage = "https://github.com/initializ-buildpacks/yarn"
+  id = "initializ-buildpacks/yarn"
+  name = "Initializ Buildpack for Yarn"
   sbom-formats = ["application/vnd.cyclonedx+json", "application/spdx+json", "application/vnd.syft+json"]
 
   [[buildpack.licenses]]
     type = "Apache-2.0"
-    uri = "https://github.com/paketo-buildpacks/yarn/blob/main/LICENSE"
+    uri = "https://github.com/initializ-buildpacks/yarn/blob/main/LICENSE"
 
 [metadata]
   include-files = ["bin/run", "bin/build", "bin/detect", "buildpack.toml"]
